# granite_asr_fastapi

./: README.md  __init__.py  alignment.py  audio.py  config.py  diarization.py  model.py  pyproject.toml  requirements.txt  run.py  schemas.py  server.py  silence.py  vad.py
notebooks/: colab_gpu_inference.ipynb
scripts/: test_microservice_e2e.py
tests/: conftest.py  test_alignment.py  test_audio.py  test_diarization.py  test_diarization_pipeline.py  test_realworld.py  test_silence.py
